# LiDAR-Processing

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh  launch.sh
Convex-Hull/: CMakeLists.txt  README.md  convex_hull.hpp  test_convex_hull.cpp
DBSCAN/: .gitmodules  CMakeLists.txt  LICENSE  README.md  dbscan.hpp  dbscan_nanoflann.hpp  example_dbscan.cpp  point_struct.hpp
DBSCAN/KDTree/: CMakeLists.txt  README.md  example_kdtree.cpp  kdtree.hpp  test_kdtree.cpp
Fast-Euclidean-Clustering/: CMakeLists.txt  LICENSE  README.md  example_fast_euclidean_clustering.cpp  fec_clustering.hpp  fec_point_cloud.hpp  fec_union_find.hpp
config/: pointcloud.rviz
include/: adaptive_euclidean_clustering.hpp  channel_based_ground_segmenter.hpp  conversions.hpp  delaunator.hpp  geometric_operations.hpp  ground_segmentation.hpp  internal_types.hpp  line_fit_ransac_ground_segmenter.hpp  obstacle_clustering.hpp  obstacle_simplification.hpp  polygon_simplification.hpp  ransac_ground_segmentation.hpp  ransac_line_fitter.hpp
include/utilities/: bounded_dynamic_array.hpp  bounded_vector.hpp
lidar_processing/conversion/: CMakeLists.txt
lidar_processing/conversion/include/: conversion.hpp  point_labels.hpp  point_types.hpp
lidar_processing/data_reader_node/: CMakeLists.txt
lidar_processing/data_reader_node/include/: data_reader_node.hpp
lidar_processing/data_reader_node/src/: data_reader_node.cpp  data_reader_node.hpp
lidar_processing/ground_segmentation_node/: CMakeLists.txt
lidar_processing/ground_segmentation_node/src/: ground_segmentation.cpp  ground_segmentation.hpp  ground_segmentation_node.cpp  ground_segmentation_node.hpp
lidar_processing/obstacle_clustering_node/: CMakeLists.txt  package.xml
lidar_processing/obstacle_clustering_node/concave_hull/: concave_hull.hpp
lidar_processing/obstacle_clustering_node/convex_hull/: convex_hull.cpp  convex_hull.hpp
lidar_processing/obstacle_clustering_node/fast_euclidean_clustering/: fast_euclidean_clustering.hpp
lidar_processing/obstacle_clustering_node/src/: convex_hull.hpp  obstacle_clustering.cpp  obstacle_clustering.hpp  obstacle_clustering_node.cpp  obstacle_clustering_node.hpp
lidar_processing/transform_node/: CMakeLists.txt
lidar_processing/transform_node/src/: transform_node.cpp  transform_node.hpp
lidar_processing_pipeline/: CMakeLists.txt
lidar_processing_pipeline/include/: conversions.hpp  geometric_operations.hpp  ground_segmentation.hpp  internal_types.hpp  obstacle_clustering.hpp  obstacle_simplification.hpp
lidar_processing_pipeline/include/utilities/: stack_vector.cpp  stack_vector.hpp
lidar_processing_pipeline/src/: data_reader_node.cpp  ground_segmentation.cpp  point_cloud_publisher_node.cpp  processing_node.cpp
pipeline/: CMakeLists.txt  launch.sh
pipeline/include/: conversions.hpp  convex_hull.hpp  delaunay.hpp  euclidean_clustering.hpp  ground_segmentation.hpp  internal_types.hpp  kdtree.hpp  obstacle_clustering.hpp  quad_tree.hpp
pipeline/licenses/fast_euclidean_clustering/: LICENSE
pipeline/rviz2_config/: rviz2_config.rviz
pipeline/src/: data_reader_node.cpp  processing_node.cpp
rviz2_config/: rviz2_config.rviz
src/: adaptive_euclidean_clustering.cpp  cartesian_vector_2d_adapter.hpp  cartesian_vector_3d_adapter.hpp  clustering.cpp  clustering.hpp  conversion.cpp  conversions.cpp  conversions.hpp  dataloader.cpp  delaunator.hpp  ground_segmentation.cpp  kdtree.hpp  kdtree_3d.hpp  obstacle_clustering.cpp  point_cloud_publisher_node.cpp  pointcloud.hpp  polygon_simplification.cpp  polygon_simplification.hpp  polygonization.cpp  polygonization.hpp  priority_queue.hpp  processing_node.cpp  processor.cpp  queue.hpp  segmentation.cpp  segmentation.hpp  stack.hpp  vector.hpp
test/: test_cartesian_vector_2d_adapter.cpp  test_cartesian_vector_3d_adapter.cpp  test_kdtree.cpp  test_pointcloud.cpp
visualisation/: rviz2_config.rviz
